# sentinel-ml-drift-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_rolling_analysis.py  sentinel_config.yaml
.github/workflows/: tests.yml
app/: streamlit_app.py
data/processed/: taxi_current_era.csv  taxi_training_era.csv
notebooks/: 01_eda_and_results.ipynb  02_citibike_validation.ipynb  05_robustness_analysis.ipynb
reports/: drift_report.csv  rolling_drift_timeline.csv
sentinel/: __init__.py  alerting.py  baseline.py  batch.py  cli.py  concept_drift.py  config.py  core.py  metrics.py  performance.py  rolling.py
src/: concept_drift.py  data_loader.py  data_simulation.py  drift_metrics.py  model.py  monitor.py  performance_estimation.py
tests/: test_alerting.py  test_batch.py  test_cli.py  test_concept_drift.py  test_config.py  test_core.py  test_drift_metrics.py  test_performance.py  test_rolling.py
