[project]
name = "sentinel-drift-monitor"
version = "0.1.0"
description = "Statistical ML model drift detection: data drift, concept drift, and label-free performance estimation on any tabular dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sentinel"]